--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CampusKart</string>
+    <string name="google_maps_key" translatable="false">AIzaSyCVQD30gLn2zat9zeUs-fA2peh3-SSUZ9w</string>
 </resources>
